--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ultra-optimization-mr",
+  "name": "ultra-optimization",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "element-china-area-data": "^5.0.2",
+    "element-ui": "^2.15.0",
+    "js-base64": "^3.6.0",
+    "pdfobject": "^2.2.4",
+    "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
